<resources>
    <string name="app_name">KMart</string>
    <string name="edit_label">Editar</string>
    <string name="etiqueta">Etiqueta</string>
    <string name="remover">Remover</string>
    <string name="textview">TextView</string>
    <string name="buy_product">Comprar Produto</string>
    <string name="open_buy_product_actitivy_btn_label">Comprar Mais Produtos</string>
    <string name="unidades_de_medi_o">Unidades de medição</string>
    <string name="pre_o_de_compra_do_fornecedor">Preço de compra do fornecedor</string>
    <string name="pre_o_de_venda">Preço de venda</string>
    <string name="descri_o">Descrição</string>
    <string name="quantidade_comprada">Quantidade comprada</string>
    <string name="nome">Nome</string>
    <string name="c_digo_de_barras">Código de Barras</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>